--- a/www/index.html
+++ b/www/index.html
@@ -40,7 +40,7 @@ function onDeviceReady() {
 
 	game.state.start('Menu');
 	
-	/*
+	
 	//get the installed plugin instance
 	var service = Cocoon.Ad;
 
@@ -56,7 +56,8 @@ function onDeviceReady() {
 		android: {
 			//appId: "ca-app-pub-2469801941701847~5543139712",
 			//banner: "ca-app-pub-2469801941701847/5722678082",
-			banner: "ca-app-pub-3940256099942544/6300978111",
+			//banner: "ca-app-pub-3940256099942544/6300978111",
+			banner: "ca-app-pub-5012716502116537/9347024484",
 			
 		}
 	});
@@ -74,7 +75,7 @@ function onDeviceReady() {
 		banner.setLayout(Cocoon.Ad.BannerLayout.BOTTOM_CENTER);
 		banner.show();
 	});
-	banner.load();*/
+	banner.load();
 }  
 
 
